Fix long MathJax equation off screen with scroll overflow

--- a/LESS/layout.less
+++ b/LESS/layout.less
@@ -5,6 +5,11 @@ body{
   visibility: hidden;
 }
 
+//Allow for overflows in case of long MathJax
+span.mjx-chtml.MJXc-display{
+  overflow:scroll;
+}
+
 img {
   border: 0;
   max-width: 100%;
